--- a/application.properties
+++ b/application.properties
@@ -1,3 +1,4 @@
+spring.application.name=config-default
 eureka.instance.prefer-ip-address=true
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
