--- a/application-dev.properties
+++ b/application-dev.properties
@@ -1,3 +1,4 @@
+spring.application.name=CONFIG-SERVER-dev
 eureka.instance.prefer-ip-address=true
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
